test/files/type-resolver/errors/variable-input.otest
name = "Invalid variable type in function input"
line = 4
character = 14
error = 'Expected number for input "volume", but received sequence order constant.'

---

test = sequence-forward

sine(volume: test)

---

name = "Invalid variable type from outer scope in function input"
line = 5
character = 18
error = 'Expected number for input "volume", but received string.'

---

test = "test"

func() = {
    sine(volume: test)
}

---

name = "Invalid input type in function input"
line = 3
character = 18
error = 'Expected number for input "volume", but received list of number.'

---

func(test: [ 1, 2, 3 ]) = {
    sine(volume: test)
}
